--- a/assets/01-html/06-embedded/03-map_element.html
+++ b/assets/01-html/06-embedded/03-map_element.html
@@ -14,7 +14,7 @@
 			<code>&lt;map&gt;</code> 요소의 필수 속성인 name 속성은 <code>&lt;img&gt;</code> 요소의 usemap 속성과 결합하여, 이미지(image)와 맵(map) 사이의 관계를 설정합니다.<br>
 			HTML5에서는 요소에 id 속성을 명시할 때 그 값을 반드시 name 속성값과 같은 값으로 명시해야만 합니다.<br>
 			XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다. HTML5에서는 nohref 속성은 폐기되었습니다.<br>
-			<mark>HTML5.1부터 hreflang, type 속성은 더 이상 지원하지 않음.</mark>
+			<mark>HTML5.1부터 hreflang, type 속성은 더 이상 지원하지 않습니다.</mark>
 		</p>
 		<div class="line_code mt_m">
 			<p class="t_blue">CSS 기본값 : map {display: inline;}</p>
@@ -27,7 +27,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;img name=&quot;이름&quot; id=&quot;name이름과 동일&quot;&gt;</span></h3>
 			<p class="mt_s">
-				필수 속성으로, 이미지맵의 이름을 명시함.
+				필수 속성으로, 이미지맵의 이름을 명시합니다.
 			</p>
 		</article>
 	</section>
