--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -23,7 +23,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[shape] <span class="t_blue">&lt;area shape=&quot;rect | circle | poly&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				영역의 모양을 명시함.
+				영역의 모양을 명시합니다.
 			</p>
 			<ol class="ol_lst indent mt_sm">
 				<li>rect 값 - 사각형 영역을 정의</li>
@@ -44,7 +44,7 @@
 			</p>
 			<ol class="ol_lst indent mt_s">
 				<li>
-					<p>shape 속성이 rect 속성 값을 가질때</p>
+					<p>shape 속성이 rect 속성 값을 가지는 경우</p>
 					<figure class="img_figure mt_s">
 						<img src="/ukncs/images/html/img_map_rect_on-off1.gif" alt="rect 이미지 예제">
 						<figcaption>coords="x1,y1, x2,y2" - coords=" 0, 0, 50, 50"</figcaption>
@@ -67,7 +67,7 @@
 				</li>
 				<li class="mt_ms">
 					<p>
-						shape 속성이 poly 속성 값을 가질때<br>
+						shape 속성이 poly 속성 값을 가지는 경우<br>
 						형상, X값의 집합이고, 다각형Y의 각 포인트에 대한 쌍 : x1, y1, x2, y2, x3, y3, 등.
 						HTML4에서 백분율 기호 (%)가 추가 된 경우 값은 픽셀 수 또는 백분율입니다.<br>
 						HTML5에서 값은 CSS 픽셀 수입니다.
@@ -89,26 +89,26 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[href] <span class="t_blue">&lt;area href=&quot;URL&quot;&gt;</span></h3>
 			<p class="mt_s">
-				해당 영역(area)에 연결된 하이퍼링크의 대상 URL(target URL)을 명시함.
+				해당 영역(area)에 연결된 하이퍼링크의 대상 URL(target URL)을 명시합니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[alt] <span class="t_blue">&lt;area alt=&quot;대체 텍스트&quot;&gt;</span></h3>
 			<p class="mt_s">
-				영역(area)에 대한 대체 텍스트(alternate text)를 명시함.<br>
-				반드시 필수로 들어가야 하며, href 속성이 설정되어 있어야만 사용할 수 있음.
+				영역(area)에 대한 대체 텍스트(alternate text)를 명시합니다.<br>
+				반드시 필수로 들어가야 하며, href 속성이 설정되어 있어야만 사용할 수 있습니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;area target=&quot;_blank | _parent | _self | _top | 프레임 이름&quot;&gt;</span></h3>
 			<p class="mt_s">
-				영역을 클릭했을 때 대상 URL의 문서가 열릴 위치를 명시함.
+				영역을 클릭했을 때 대상 URL의 문서가 열릴 위치를 명시합니다.
 			</p>
 			<ol class="ol_lst mt_sm indent">
 				<li>_blank 속성 값 : URL을 새로운 브라우징 문맥에 표시합니다. 보통 새 탭이지만, 사용자가 브라우저 설정을 통해 새 창으로 바꿀 수 있습니다.</li>
-				<li>_self 속성 값 : URL을 현재 브라우징 문맥에 표시합니다. 기본값으로 생략 가능.</li>
+				<li>_self 속성 값 : URL을 현재 브라우징 문맥에 표시합니다. 기본값으로 생략이 가능합니다.</li>
 				<li>_parent 속성 값 : URL을 현재 브라우징 문맥의 부모에 표시합니다. 부모가 존재하지 않으면 _self와 동일하게 행동합니다.</li>
 				<li>_top 속성 값 : URL을 최상단 브라우징 문맥(현재 문맥의 부모면서 자신의 부모가 존재하지 않는, 제일 높은 문맥)에 표시합니다. 부모가 존재하지 않으면 _self와 동일하게 행동합니다.</li>
 			</ol>
@@ -117,25 +117,25 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[download] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area download=&quot;파일이름&quot;&gt;</span></h3>
 			<p class="mt_s">
-				사용자가 하이퍼링크를 클릭할 때 해당 대상(target)으로 연결되지 않고 대신 해당 콘텐츠가 다운로드됨을 명시함.
+				사용자가 하이퍼링크를 클릭할 때 해당 대상(target)으로 연결되지 않고 대신 해당 콘텐츠의 다운로드를 명시합니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[media] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area media=&quot;미디어 쿼리&quot;&gt;</span></h3>
 			<p class="mt_s">
-				대상 URL이 최적화되는 미디어나 매체를 명시함.
+				대상 URL이 최적화되는 미디어나 매체를 명시합니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[rel] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area rel=&quot;alternate | author | bookmark | help | license | next | nofollow | noreferrer | prefetch | prev | search | tag&quot;&gt;</span></h3>
 			<p class="mt_s">
-				현재 문서와 대상 URL 사이의 연관 관계를 명시함.<br>
+				현재 문서와 대상 URL 사이의 연관 관계를 명시합니다.<br>
 				href 속성을 포함하는 앵커의 경우이 속성은 대상 객체와 링크 객체의 관계를 지정합니다.
 				<span class="reference mt_l"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Link_types" target="_blank" title="새창열림">링크 유형 값(참조)</a></span><br>
-				값과 의미는 문서 작성자에게 의미가있는 일부 권한에 의해 등록됩니다.<br>
-				다른 관계가 없으면 기본 관계는 무효입니다.<br>
+				값과 의미는 문서 작성자에게 의미가 있는 일부 권한에 의해 등록됩니다.<br>
+				다른 관계가 없으면 기본 관계는 무효가 됩니다.<br>
 				href 속성이 있는 경우에만 이 속성을 사용할 수 있습니다.
 			</p>
 		</article>
