--- a/assets/01-html/06-embedded/05-video_element.html
+++ b/assets/01-html/06-embedded/05-video_element.html
@@ -8,9 +8,9 @@
 	<blockquote class="uk_note mt_l" role="note">
 		<h3 class="sound_only">요약 설명</h3>
 		<p>
-			원본비디오를 압축해서 동영상 파일로 집어넣은 것을 <b>인코딩(encording)</b>이라 하고,<br>
-			영상을 꺼내 플레이어에서 보여주는 것을 <b>디코딩(Decoding)</b> 이라고 하며,<br>
-			이 두가지를 처리하는 것이 <b>비디오 코덱</b>입니다.
+			원본 비디오를 압축해서 동영상 파일로 변환한 것을 <b>인코딩(encording)</b>이라 하고,<br>
+			영상을 꺼내 플레이어에서 보여주는 것을 <b>디코딩(decoding)</b>이라고 하며,<br>
+			이 두 가지를 처리하는 것이 <b>비디오 코덱</b>입니다.
 		</p>
 	</blockquote>
 
@@ -18,8 +18,8 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			<code>&lt;video&gt;</code>는 비디오 재생을 문서에 지원하는 미디어 플레이어를 내장합니다.<br>
-			오디오 컨텐츠에도 <code>&lt;video&gt;</code>를 사용할 수 있지만 <code>&lt;audio&gt;</code> 요소는보다 적절한 사용자 경험을 제공 할 수 있습니다.<br>
-			autoplay가 지정된 경우, preload는 무시됨. <span class="reference mt_l"><a href="https://convertio.co/kr/webm-mp4/" target="_blank" title="새창열림">webm to mp4 converter</a></span>
+			오디오 컨텐츠에도 <code>&lt;video&gt;</code>를 사용할 수 있지만 <code>&lt;audio&gt;</code> 요소는 보다 적절한 사용자 경험을 제공할 수 있습니다.<br>
+			autoplay가 지정된 경우, preload는 무시됩니다. <span class="reference mt_l"><a href="https://convertio.co/kr/webm-mp4/" target="_blank" title="새창열림">webm to mp4 converter</a></span>
 		</p>
 		<div class="line_code mt_m">
 			<p class="t_blue">CSS 기본값 : video { display: inline; }</p>
@@ -138,8 +138,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[poster] <span class="t_blue">&lt;video poster=&quot;URL&quot;&gt;</span></h3>
 			<p class="mt_s">
-				동영상 콘텐츠를 다운로드할 필요가 없이 동영상 요소가 표시되자마자 브라우저에 나타날 수 있는 이미지 파일의 주소(URL)입니다.<br>
-				이 속성이 명시되지 않으면, 첫 번째 프레임이 사용 가능하게 될때까지 아무것도 출력되지 않다가, 가능하게 되면 첫 번째 프레임을 포스터 프레임으로 출력합니다.
+				동영상 콘텐츠를 다운로드할 필요가 없이 동영상 요소가 표시되자마자 브라우저에 나타낼 수 있는 이미지 파일의 주소(URL)입니다.<br>
+				이 속성이 명시되지 않으면, 첫 번째 프레임이 사용 가능하게 될 때까지 아무것도 출력되지 않다가, 가능하게 되면 첫 번째 프레임을 포스터 프레임으로 출력합니다.
 			</p>
 			<aside class="browser_support mt_s" data-tit="poster">
 				<ul>
@@ -161,18 +161,18 @@
 			</p>
 			<p class="mt_s">
 				비디오를 자동으로 재생하려 한다면 브라우저가 이를 다운로드 해야 하기 때문에 autoplay 속성보다 우선시 됩니다.<br>
-				autoplay 속성과 preload 속성을 둘 다 설정하는 것은 스펙상 가능합니다.<br>
+				autoplay 속성과 preload 속성을 둘 다 설정하는 것은 스펙상 가능합니다만,<br>
 				브라우저가 이 속성을 반드시 스팩대로 따라야 하는 것은 아닙니다. 단지 힌트일 뿐입니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
 				<ol>
 					<li class="line_code font14">
 						<strong>none</strong>
-						<p>사용자가 동영상을 못볼 수도 있습니다. 아무것도 사전 로드하지 않습니다.</p>
+						<p>사용자가 동영상을 보지 못 할 수도 있습니다. 아무것도 사전 로드하지 않습니다.</p>
 					</li>
 					<li class="line_code font14">
 						<strong>metadata</strong>
-						<p>최소한의 동영상과 함께 메타데이터(기간, 크기, 텍스트 트랙)를 사전 로드합니다.</p>
+						<p>최소한의 동영상과 함께 메타 데이터(기간, 크기, 텍스트 트랙)를 사전 로드합니다.</p>
 					</li>
 					<li class="line_code font14">
 						<strong>auto</strong>
@@ -237,15 +237,15 @@
 			<li class="mt_ml tit_h3">
 				<h3>MPEG4(.mp4/.m4v)</h3>
 				<p class="mt_s">
-					영상과 음성을 디지털 데이터로 전송하고 저장하는 규격 중 하나
+					영상과 음성을 디지털 데이터로 전송하고 저장하는 규격 중 하나.
 					part1에서 part27까지 다양한 표준으로 구성되어있고 새로운 기술이 적용되면 새로운 파트가 생깁니다.<br>
-					최근 많이 사용되는 .mp4와 m4v는 MPEG-4의 part14로 규정된 파일 형식이며, 최근에는 H.264 코덱이 MPEG-4의 part10 AVC로 규격화되었습니다.
+					최근 많이 사용되는 .mp4와 m4v는 MPEG-4의 part14로 규정된 파일 형식이며, 최근에는 H.264 코덱이 MPEG-4의 part10 AVC로 규격화 되었습니다.
 				</p>
 			</li>
 			<li class="mt_ml tit_h3">
 				<h3>MP4 H.264 (AAC 또는 MP3)</h3>
 				<p class="mt_s">
-					H.264 비디오 코덱과 AAC 오디오 코덱이 포함 된 MP4 컨테이너 형식은 데스크톱 / 모바일 Internet Explorer, Safari 및 Chrome에서 기본적으로 지원되지만 Chromium과 Opera는 이 형식을 지원하지 않습니다.<br>
+					H.264 비디오 코덱과 AAC 오디오 코덱이 포함된 MP4 컨테이너 형식은 데스크톱 / 모바일 Internet Explorer, Safari 및 Chrome에서 기본적으로 지원되지만 Chromium과 Opera는 이 형식을 지원하지 않습니다.<br>
 					IE와 Chrome은 MP4 컨테이너에서 MP3 오디오 코덱을 지원하지만 Safari는 지원하지 않습니다. Android / Firefox 용 Firefox / Firefox OS는 경우에 따라 형식을 지원하지만 타사 디코더를 사용할 수있는 경우에만 장치 하드웨어가 MP4를 인코딩하는 데 사용되는 프로필을 처리 할 수 ​​있습니다.
 				</p>
 				<p class="mt_s">
@@ -254,29 +254,29 @@
 				<p class="mt_s">
 					MPEG 미디어 형식은 자유롭게 라이센스가 부여되지 않은 특허에 의해 보호됩니다.<br>
 					필요한 라이센스 중 일부는 MPEG LA에서 구입할 수 있습니다.<br>
-					H.264는 현재 로열티가없는 형식이 아니기 때문에 Mozilla [ 1 , 2 ], Google [ 1 , 2 ] 및 Opera에 따르면 개방형 웹 플랫폼에는 적합하지 않습니다.<br>
+					H.264는 현재 로열티가 없는 형식이 아니기 때문에 Mozilla [ 1 , 2 ], Google [ 1 , 2 ] 및 Opera에 따르면 개방형 웹 플랫폼에는 적합하지 않습니다.<br>
 					그러나 로열티가없는 형식은 Internet Explorer와 Safari에서 지원되지 않기 때문에 Mozilla는 형식을 지원하기로 결정 했으며 Google은 Chrome에서 지원하지 않을 것이라고 약속했습니다.
 				</p>
 			</li>
 			<li class="mt_ml tit_h3">
 				<h3>MP3</h3>
 				<p class="mt_s">
-					운영 체제가 MP3 디코더를 제공 할 때 MP3 오디오 형식 (.mp3, audio/mpeg , MP4 컨테이너의 위의 MP3 오디오와 구분됨)은 Firefox / Firefox for Android / Firefox OS에서 <code>&lt;audio&gt;</code> 로 지원됩니다.
+					운영 체제가 MP3 디코더를 제공 할 때 MP3 오디오 형식 (.mp3, audio/mpeg , MP4 컨테이너의 위의 MP3 오디오와 구분됨)은 Firefox / Firefox for Android / Firefox OS에서 <code>&lt;audio&gt;</code>로 지원됩니다.
 				</p>
 			</li>
 			<li class="mt_ml tit_h3">
 				<h3>ogg</h3>
 				<p class="mt_s">
 					공개 소스 형식으로 Vorbis, FLAC 같은 오디오 코덱과 Ogg Theora 같은 비디오 코덱이 있습니다.<br>
-					공개 소스이기때문에 각종 무료 및 상용 미디어 플레이어에 Ogg의 여러 코덱을 사용할 수 있습니다.
+					공개 소스이기 때문에 각종 무료 및 상용 미디어 플레이어에 Ogg의 여러 코덱을 사용할 수 있습니다.
 				</p>
 			</li>
 			<li class="mt_ml tit_h3">
 				<h3>WebM</h3>
 				<p class="mt_s">
-					구글이 2010년 발표한 공개 소스 방식의 파일형식입니다.<br>
-					WebM 형식은 Matroska 컨테이너 형식의 제한된 버전을 기반으로합니다. 항상 VP8 또는 VP9 비디오 코덱과 Vorbis 또는 Opus 오디오 코덱을 사용합니다.<br>
-					WebM 포맷, 특히 VP8 비디오 코덱은 MPEG LA의 특허 풀 형성 요청에 응한 기업 그룹의 특허 침해 혐의로 기소되었지만 MPEG LA는 특허 출원을 구글 에 "영원히, 양도 할 수있는, 로열티없는 면허". 이것은 사실상 WebM 형식의 모든 알려진 특허가 모든 사람에게 무료로 라이센스된다는 것을 의미합니다.
+					구글이 2010년 발표한 공개 소스 방식의 파일 형식입니다.<br>
+					WebM 형식은 Matroska 컨테이너 형식의 제한된 버전을 기반으로 합니다. 항상 VP8 또는 VP9 비디오 코덱과 Vorbis 또는 Opus 오디오 코덱을 사용합니다.<br>
+					WebM 포맷, 특히 VP8 비디오 코덱은 MPEG LA의 특허 풀 형성 요청에 응한 기업 그룹의 특허 침해 혐의로 기소되었지만 MPEG LA는 특허 출원을 구글 에 &quot;영원히, 양도할 수 있는, 로열티 없는 면허&quot;. 이것은 사실상 WebM 형식의 모든 알려진 특허가 모든 사람에게 무료로 라이센스 된다는 것을 의미합니다.
 				</p>
 				<p class="mt_s">
 					Gecko는 다음 MIME 유형을 WebM 파일로 인식합니다.
@@ -289,7 +289,7 @@
 			<li class="mt_ml tit_h3">
 				<h3>avi</h3>
 				<p class="mt_s">
-					윈도우 운영체제에서 지원하는 동영상 파일 형식으로 화질은 뛰어나지만 용량이 크기때문에 스트리밍 방식의 실시간 웹 영상에는 적합하지않습니다.
+					윈도우 운영체제에서 지원하는 동영상 파일 형식으로 화질은 뛰어나지만 용량이 크기 때문에 스트리밍 방식의 실시간 웹 영상에는 적합하지 않습니다.
 				</p>
 			</li>
 		</ol>
@@ -321,7 +321,7 @@
 				<h3>오그 테오 라 보비스(Ogg)</h3>
 				<p class="mt_s">
 					공개 코덱으로 테오라 코덱은 Ogv(Theora+Vorbis) 파일에 주로 사용됩니다.<br>
-					Theora 동영상 코덱과 Vorbis 오디오 코덱이 포함 된 Ogg 컨테이너 형식은 데스크톱 / 모바일 Gecko (Firefox), Chrome 및 Opera에서 지원되며 형식에 대한 지원은 추가 기능을 설치하여 Safari (iOS 제외)에 추가 할 수 있습니다.<br>
+					Theora 동영상 코덱과 Vorbis 오디오 코덱이 포함 된 Ogg 컨테이너 형식은 데스크톱 / 모바일 Gecko (Firefox), Chrome 및 Opera에서 지원되며 형식에 대한 지원은 추가 기능을 설치하여 Safari(iOS 제외)에 추가 할 수 있습니다.<br>
 					Internet Explorer에서 지원되지 않습니다.
 				</p>
 				<p class="mt_s">
@@ -332,21 +332,21 @@
 					Theora의 특허 상황은 WebM의 특허 상황과 유사합니다.
 				</p>
 				<p class="mt_s">
-					Theora Cookbook 을 읽으면 Ogg 미디어를 만드는 방법에 대해 자세히 알아볼 수 있습니다.
+					Theora Cookbook을 읽으면 Ogg 미디어를 만드는 방법에 대해 자세히 알아볼 수 있습니다.
 				</p>
 				<p class="mt_s">
 					Gecko는 다음 MIME 유형을 Ogg 파일로 인식합니다.
 				</p>
 				<div class="mt_m line_code">
-					<p><b>audio/ogg</b> - 오디오 만 포함 된 Ogg 파일.</p>
-					<p><b>video/ogg</b> - 비디오 (및 가능하게는 오디오)를 포함한 ogg 파일.</p>
-					<p><b>application/ogg</b> - 불특정 콘텐츠를 가진 Ogg 파일. 다른 두 MIME 유형 중 하나를 사용하는 것이 좋지만 파일의 내용을 모르는 경우이 방법을 사용할 수 있습니다.</p>
+					<p><b>audio/ogg</b> - 오디오만 포함 된 ogg 파일.</p>
+					<p><b>video/ogg</b> - 비디오(및 가능하게는 오디오)를 포함한 ogg 파일.</p>
+					<p><b>application/ogg</b> - 불특정 콘텐츠를 가진 ogg 파일. 다른 두 MIME 유형 중 하나를 사용하는 것이 좋지만 파일의 내용을 모르는 경우 이 방법을 사용할 수 있습니다.</p>
 				</div>
 			</li>
 			<li class="mt_ml tit_h3">
 				<h3>오그 오푸스</h3>
 				<p class="mt_s">
-					Ogg 컨테이너에는 Opus 코덱을 사용하여 인코딩 된 오디오도 포함될 수 있습니다.<br>
+					Ogg 컨테이너에는 Opus 코덱을 사용하여 인코딩한 오디오도 포함될 수 있습니다.<br>
 					이 기능은 Gecko 15.0 (Firefox 15.0 / Thunderbird 15.0 / SeaMonkey 2.12) 이상에서 데스크탑 및 모바일 브라우저에서 사용할 수 있습니다.
 				</p>
 				<p class="mt_s">
@@ -360,15 +360,15 @@
 			<li class="mt_ml tit_h3">
 				<h3>오그 FLAC</h3>
 				<p class="mt_s">
-					Ogg 컨테이너에는 FLAC 코덱을 사용하여 인코딩 된 오디오도 포함될 수 있습니다.<br>
-					이 기능은 Gecko 51.0 (Firefox 51.0 / Thunderbird 51.0 / SeaMonkey 2.48)에서 사용할 수 있으며 나중에 데스크탑 및 모바일 Gecko 58.0 (Firefox 58.0 / Thunderbird 58.0 / SeaMonkey 2.55)에서 사용할 수 있습니다.
+					Ogg 컨테이너에는 FLAC 코덱을 사용하여 인코딩한 오디오도 포함될 수 있습니다.<br>
+					이 기능은 Gecko 51.0 (Firefox 51.0 / Thunderbird 51.0 / SeaMonkey 2.48)에서 사용할 수 있으며, 나중에 데스크탑 및 모바일 Gecko 58.0(Firefox 58.0 / Thunderbird 58.0 / SeaMonkey 2.55)에서 사용할 수 있습니다.
 				</p>
 			</li>
 			<li class="mt_ml tit_h3">
 				<h3>웨이브 PCM</h3>
 				<p class="mt_s">
-					PCM 오디오 코덱 (WAVE 코덱 "1")이있는 WAVE 컨테이너 형식은 데스크탑 / 모바일 Gecko (Firefox) 및 Safari에서 지원됩니다.<br>
-					WAVE 컨테이너 형식의 파일은 대개 ".wav"확장자로 끝납니다.
+					PCM 오디오 코덱(WAVE 코덱 &quot;1&quot;)이 있는 WAVE 컨테이너 형식은 데스크탑 / 모바일 Gecko (Firefox) 및 Safari에서 지원됩니다.<br>
+					WAVE 컨테이너 형식의 파일은 대개 &quot;.wav&quot; 확장자로 끝납니다.
 				</p>
 				<p class="mt_s">
 					Gecko는 다음 MIME 유형을 WAVE 오디오 파일로 인식합니다.
@@ -383,15 +383,15 @@
 			<li class="mt_ml tit_h3">
 				<h3>FLAC</h3>
 				<p class="mt_s">
-					FLAC 오디오 코덱 ( FLAC 코덱 )이있는 FLAC 컨테이너 형식은<br>
+					FLAC 오디오 코덱 (FLAC 코덱)이 있는 FLAC 컨테이너 형식은<br>
 					데스크탑 Gecko Firefox 51.0 (Firefox 51.0 / Thunderbird 51.0 / SeaMonkey 2.48) 및 모바일 Gecko 58.0 (Firefox 58.0 / Thunderbird 58.0 / SeaMonkey 2.55)에서 지원됩니다.<br>
-					FLAC 컨테이너 형식의 파일은 대개 ".flac"확장자로 끝납니다.
+					FLAC 컨테이너 형식의 파일은 대개 &quot;.flac&quot; 확장자로 끝납니다.
 				</p>
 				<p class="mt_s">
 					Gecko는 다음 MIME 유형을 FLAC 오디오 파일로 인식합니다.
 				</p>
 				<div class="mt_m line_code">
-					<p><b>audio/flac</b> (선호)</p>
+					<p><b>audio/flac</b>(선호)</p>
 					<p><b>audio/x-flac</b></p>
 				</div>
 			</li>
