--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -8,19 +8,19 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			이미지를 삽입. (&lt;img&gt;의 srcset, sizes로 대체 가능)<br>
+			이미지를 삽입합니다.(&lt;img&gt;의 srcset, sizes로 대체 가능)<br>
 			<code>&lt;picture&gt;</code> 요소는 <code>&lt;img&gt;</code> 요소의 다중 이미지 리소스(multiple image resources)를 위한 컨테이너를 정의할 때 사용합니다.<br>
-			<code>&lt;picture&gt;</code> 요소는 뷰포트(viewport)의 너비에 따라 커지거나 작아지는 하나의 이미지를 사용하는 대신 서로 다른 디스플레이나 기기에서 해당 뷰포트에 알맞게 채워질 수 있도록 여러 개의 이미지 중에서 적절한 이미지를 사용할 수 있도록 해줍니다. 이러한 요소는 웹 개발자가 이미지의 리소스를 보다 유연하게 지정할 수 있도록 해주므로, 반응형 디자인(responsive design)에서 주로 사용합니다.<br>
+			<code>&lt;picture&gt;</code> 요소는 뷰포트(viewport)의 너비에 따라 커지거나 작아지는 하나의 이미지를 사용하는 대신 서로 다른 디스플레이나 기기에서 해당 뷰포트에 알맞게 채워질 수 있도록 여러 개의 이미지 중에서 적절한 이미지를 사용할 수 있도록 합니다. 이러한 요소는 웹 개발자가 이미지의 리소스를 보다 유연하게 지정할 수 있도록 해주므로, 반응형 디자인(responsive design)에서 주로 사용합니다.<br>
 			<code>&lt;picture&gt;</code> 요소는 0개 이상의 <code>&lt;source&gt;</code> 요소와 하나의 <code>&lt;img&gt;</code> 요소로 구성되며, 브라우저는 <code>&lt;source&gt;</code> 요소 중에서 해당 뷰포트와 가장 잘 어울리는 <code>&lt;source&gt;</code> 요소를 다음과 같은 방법을 사용하여 선택합니다.<br>
 		</p>
 		<p class="mt_s">
 			브라우저는 <code>&lt;source&gt;</code> 요소들의 속성값을 각각 확인해 나가며 조건을 만족하는 첫 번째 <code>&lt;source&gt;</code> 요소를 사용하고, 나머지 <code>&lt;source&gt;</code> 요소들은 무시합니다.<br>
 			이 때 <code>&lt;img&gt;</code> 요소는 <code>&lt;picture&gt;</code> 요소의 자식 요소 중에서 가장 마지막에 위치해야 합니다.<br>
-			이러한 <code>&lt;img&gt;</code> 요소는 <code>&lt;picture&gt;</code> 요소를 지원하지 않는 브라우저를 위한 하위 호환성(backward compatibility)을 위해 사용되거나 명시된 <code>&lt;source&gt;</code>요소가 모두 조건을 만족하지 못 할 경우 사용됩니다.<br>
+			이러한 <code>&lt;img&gt;</code> 요소는 <code>&lt;picture&gt;</code> 요소를 지원하지 않는 브라우저를 위한 하위 호환성(backward compatibility)을 위해 사용되거나 명시된 <code>&lt;source&gt;</code> 요소가 모두 조건을 만족하지 못 할 경우 사용됩니다.<br>
 		</p>
 		<p class="mt_s">
 			<code>&lt;picture&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
-			<mark>Internet Explorer : No support(지원하지 않음)</mark>
+			<mark>Internet Explorer : 지원하지 않음</mark>
 		</p>
 	</section>
 
@@ -30,8 +30,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[media] <span class="t_blue">&lt;source media="미디어 조건"&gt;</span></h3>
 			<p class="mt_s">
-				사용자 에이전트가 각 <code>&lt;source&gt;</code> 요소 에 대해 평가할 미디어 조건 (미디어 쿼리와 유사)을 지정합니다.<br>
-				미디어 조건이 false되면 해당 <code>&lt;source&gt;</code>요소를 건너 뜁니다.
+				사용자 에이전트가 각 <code>&lt;source&gt;</code> 요소에 대해 평가할 미디어 조건(미디어 쿼리와 유사)을 지정합니다.<br>
+				미디어 조건을 만족하지 못하면 해당 <code>&lt;source&gt;</code>요소를 무시합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.8.picture_element_media.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
@@ -43,8 +43,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;source type="MIME 유형(image/webp)"&gt;</span></h3>
 			<p class="mt_s">
-				요소 속성에서 리소스 URL에 대한 MIME 유형 을 지정 합니다.<br>
-				사용자 에이전트가 지정된 유형을 지원하지 않으면 srcset 요소를 건너 뜁니다.
+				요소 속성에서 리소스 URL에 대한 MIME 유형을 지정합니다.<br>
+				사용자 에이전트가 지정된 유형을 지원하지 않으면 srcset 요소를 무시합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.8.picture_element_type.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
@@ -56,8 +56,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[srcset] <span class="t_blue">&lt;source srcset="URL"&gt;</span></h3>
 			<p class="mt_s">
-				브라우저가 크기에 따라 사용할 수있는 이미지를 나타냅니다.<br>
-				높은 DPI의 스크린의 고해상도 영상을 제공하기 위해 사용.
+				브라우저가 크기에 따라 사용할 수 있는 이미지를 나타냅니다.<br>
+				높은 DPI의 스크린의 고해상도 영상을 제공하기 위해 사용합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.8.picture_element_srcset.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
