--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -20,7 +20,7 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;picture&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
-			<mark>Internet Explorer : 지원하지 않음</mark>
+			<mark>Internet Explorer는 지원하지 않습니다.</mark>
 		</p>
 	</section>
 
