--- a/assets/01-html/06-embedded/09-source_element.html
+++ b/assets/01-html/06-embedded/09-source_element.html
@@ -14,7 +14,7 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;source&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
-			<mark>Internet Explorer 9+ 부터 지원</mark>
+			<mark>Internet Explorer 9+ 부터 지원합니다.</mark>
 		</p>
 	</section>
 
@@ -24,17 +24,17 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;source src="URL"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;source&gt;</code> 요소가 <code>&lt;audio&gt;</code> 요소나 <code>&lt;video&gt;</code> 요소 내부에 사용될 때 필수 속성으로, 미디어 파일의 URL을 명시함.<br>
-				만약 <code>&lt;source&gt;</code> 요소가 <code>&lt;picture&gt;</code> 요소 내부에 있을경우, 이 속성은 무시됩니다.
+				<code>&lt;source&gt;</code> 요소가 <code>&lt;audio&gt;</code> 요소나 <code>&lt;video&gt;</code> 요소 내부에 사용될 때 필수 속성으로, 미디어 파일의 URL을 명시합니다.<br>
+				만약 <code>&lt;source&gt;</code> 요소가 <code>&lt;picture&gt;</code> 요소 내부에 있을 경우, 이 속성은 무시됩니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;source type="미디어 타입(MIME 타입)"&gt;</span></h3>
 			<p class="mt_s">
-				미디어 리소스의 미디어 타입(MIME 타입)을 명시함.(선택적으로 codecs 매개 변수도 함께)<br>
+				미디어 리소스의 미디어 타입(MIME 타입)을 명시합니다(선택적으로 codecs 매개 변수도 함께).<br>
 				<span class="reference mt_l"><a href="http://tools.ietf.org/html/rfc4281" target="_blank" title="새창열림">RFC 4281</a></span>에
-				코덱을 어떻게 지정하는지에 대한 정보가 나와있습니다.
+				코덱을 어떻게 지정하는지에 대한 정보를 확인할 수 있습니다.
 			</p>
 			<aside class="browser_support mt_s" data-tit="type">
 				<ul>
@@ -51,7 +51,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[srcset] <span class="t_blue">&lt;source srcset="URL"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;source&gt;</code> 요소가 <code>&lt;picture&gt;</code> 요소 내부에 사용될 때 필수 속성으로, 각각 다른 환경에서 사용될 이미지의 URL을 명시함.
+				<code>&lt;source&gt;</code> 요소가 <code>&lt;picture&gt;</code> 요소 내부에 사용될 때 필수 속성으로, 각각 다른 환경에서 사용될 이미지의 URL을 명시합니다.
 			</p>
 			<aside class="browser_support mt_s" data-tit="srcset">
 				<ul>
@@ -68,22 +68,22 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[sizes] <span class="t_blue">&lt;source sizes="유효한 크기값"&gt;</span></h3>
 			<p class="mt_s">
-				각각 다른 페이지 레이아웃에서 사용될 이미지의 크기를 명시함.
+				각각 다른 페이지 레이아웃에서 사용될 이미지의 크기를 명시합니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[media] <span class="t_blue">&lt;source media="속성값"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;picture&gt;</code> 요소에서 이미지 리소스의 용도에 맞는 매체의 미디어 쿼리를 명시함.
+				<code>&lt;picture&gt;</code> 요소에서 이미지 리소스의 용도에 맞는 매체의 미디어 쿼리를 명시합니다.
 			</p>
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li class="line_code font14">
 						<strong>속성값에 사용할 수 있는 연산자는 다음과 같습니다.</strong>
-						<p><b>and</b> - AND 연산을 명시함.</p>
-						<p><b>not</b> - NOT 연산을 명시함.</p>
-						<p><b>,</b> - OR 연산을 명시함.</p>
+						<p><b>and</b> - AND 연산을 명시합니다.</p>
+						<p><b>not</b> - NOT 연산을 명시합니다.</p>
+						<p><b>,</b> - OR 연산을 명시합니다.</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>속성값에 사용할 수 있는 장치는 다음과 같습니다.</strong>
@@ -104,80 +104,80 @@
 				<ol>
 					<li class="line_code font14 mt_ms">
 						<strong>width</strong>
-						<p>대상 디스플레이 영역의 너비를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이 영역의 너비를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (max-width:900px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>height</strong>
-						<p>대상 디스플레이 영역의 높이를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이 영역의 높이를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (min-height:600px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>device-width</strong>
-						<p>대상 디스플레이 또는 종이의 너비를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이 또는 종이의 너비를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (min-device-width:500px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>device-height</strong>
-						<p>대상 디스플레이 또는 종이의 높이를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이 또는 종이의 높이를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (max-device-height:800px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>orientation</strong>
-						<p>대상 디스플레이 또는 종이의 방향을 명시함.</p>
-						<p>"portrait"는 세로 방향, "landscape"는 가로 방향을 명시함.</p>
+						<p>대상 디스플레이 또는 종이의 방향을 명시합니다.</p>
+						<p>"portrait"는 세로 방향, "landscape"는 가로 방향을 명시합니다.</p>
 						<p>ex) media="print and (orientation:landscape)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>spect-ratio</strong>
-						<p>대상 디스플레이 영역의 너비와 높이의 비율을 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이 영역의 너비와 높이의 비율을 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (aspect-ratio:16/9)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>device-aspect-ratio</strong>
-						<p>대상 디스플레이 또는 종이의 장치 너비와 장치 높이의 비율을 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이 또는 종이의 장치 너비와 장치 높이의 비율을 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (device-aspect-ratio:16/9)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>color</strong>
-						<p>대상 디스플레이의 색상 당 비트수를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이의 색상 당 비트수를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (color:4)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>color-index</strong>
-						<p>대상 디스플레이가 처리할 수 있는 색상의 개수를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이가 처리할 수 있는 색상의 개수를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (color-index: 512)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>monochrome</strong>
-						<p>단색 프레임 버퍼에서의 픽셀 당 비트수를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>단색 프레임 버퍼에서의 픽셀 당 비트수를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (monochrome:3)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>resolution</strong>
-						<p>대상 디스플레이 또는 종이의 화소밀도(pixel density)를 명시함.</p>
-						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있음.</p>
+						<p>대상 디스플레이 또는 종이의 화소밀도(pixel density)를 명시합니다.</p>
+						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="print and (resolution:360dpi)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>scan</strong>
-						<p>TV 디스플레이의 주사법(scanning method)을 명시함.</p>
-						<p>"progressive"는 프로그레시브 방식, "interlace"는 인터레이스 방식을 명시함.</p>
+						<p>TV 디스플레이의 주사법(scanning method)을 명시합니다.</p>
+						<p>"progressive"는 프로그레시브 방식, "interlace"는 인터레이스 방식을 명시합니다.</p>
 						<p>ex) media="tv and (scan:progressive)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
 						<strong>grid</strong>
-						<p>출력 장치가 그리드(grid)인지 비트맵(bitmap)인지를 명시함.</p>
-						<p>"1"은 그리드, "0"은 그리드 이외의 장치를 명시함.</p>
+						<p>출력 장치가 그리드(grid)인지 비트맵(bitmap)인지를 명시합니다.</p>
+						<p>"1"은 그리드, "0"은 그리드 이외의 장치를 명시합니다.</p>
 						<p>ex) media="projection and (grid:1)"</p>
 					</li>
 				</ol>
