--- a/assets/01-html/06-embedded/10-svg_element.html
+++ b/assets/01-html/06-embedded/10-svg_element.html
@@ -9,13 +9,13 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			스케일러블 벡터 그래픽스(Scalable Vector Graphics, SVG)는 2차원 벡터 그래픽을 표현하기 위한 XML 기반의 파일 형식으로,<br>
-			1999년 W3C(World Wide Web Consortium)의 주도하에 개발된 오픈 표준의 벡터 그래픽 파일 형식이다.<br>
-			SVG는 백터(vector) 이미지를 표현하기 위한 포맷으로 w3c에서 만든 백터 이미지 표준입니다.<br>
-			SVG는 텍스트 기반의 오픈 웹 표준이다. SVG는 의심할바 없이 CSS, DOM, SMIL 같은 다른 웹 표준과 함께 작동하기 위해서 디자인 되었다.
+			1999년 W3C(World Wide Web Consortium)의 주도하에 개발된 오픈 표준의 벡터 그래픽 파일 형식입니다.<br>
+			SVG는 백터(vector) 이미지를 표현하기 위한 포맷으로 W3C에서 만든 백터 이미지 표준입니다.<br>
+			SVG는 텍스트 기반의 오픈 웹 표준이며, 의심할 바 없이 CSS, DOM, SMIL 같은 다른 웹 표준과 함께 작동하기 위해서 디자인 되었습니다.
 		</p>
 		<p class="mt_s">
-			SVG 이미지들, 그것과 관련된 작동들은 XML XML 텍스트 파일로 정의되어있다. 그렇기에 검색될 수 있고, 색인 가능하고, 스크립트 될 수 있고 압축 가능하다.<br>
-			SVG 자체는 CSS가 아닙니다만 CSS를 이용해서 다양한 효과를 줄 때 SVG를 활용하는 경우가 많기 떄문에 여기서는 SVG에 대해서 간략하게 설명만 함.
+			SVG 이미지들, 그것과 관련된 작동들은 XML XML 텍스트 파일로 정의되어 있습니다. 그렇기에 검색될 수 있고, 색인 가능하고, 스크립트 될 수 있고 압축 가능합니다.<br>
+			SVG 자체는 CSS가 아닙니다만 CSS를 이용해서 다양한 효과를 줄 때 SVG를 활용하는 경우가 많기 떄문에 여기서는 SVG에 대해서 간략하게 설명만 하도록 하겠습니다.
 		</p>
 	</section>
 
@@ -25,7 +25,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn reference"><a href="https://developer.mozilla.org/ko/docs/Web/SVG/Element" target="_blank" title="새창열림">MDN SVG 요소 레퍼런스</a></h3>
 			<p class="mt_s">
-				MDN SVG 요소들에 대한 상세한 정보를 담고있다.
+				MDN SVG 요소들에 대한 상세한 정보를 담고 있습니다.
 			</p>
 		</article>
 
@@ -33,21 +33,21 @@
 			<h3 class="ml_mn reference"><a href="https://developer.mozilla.org/ko/docs/Web/SVG/Attribute" target="_blank" title="새창열림">MDN SVG 속성 레퍼런스</a></h3>
 
 			<p class="mt_s">
-				MDN SVG 속성들에 대한 상세한 정보를 담고있다.
+				MDN SVG 속성들에 대한 상세한 정보를 담고 있습니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn reference"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model#SVG_interfaces" target="_blank" title="새창열림">MDN SVG DOM 인터페이스 레퍼런스</a></h3>
 			<p class="mt_s">
-				MDN 전체 SVG DOM API에 대한 상세한 정보를 담고있다.
+				MDN 전체 SVG DOM API에 대한 상세한 정보를 담고 있습니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn reference"><a href="https://developer.mozilla.org/ko/docs/Web/SVG/Applying_SVG_effects_to_HTML_content" target="_blank" title="새창열림">MDN HTML 컨텐츠에 SVG 효과 적용하기</a></h3>
 			<p class="mt_s">
-				MDN SVG는 HTML, CSS, JavaScript와 함께 동작한다. SVG를 사용해 일반적인 HTML와 웹애플리케이션을 개선할 수 있다.
+				MDN SVG는 HTML, CSS, JavaScript와 함께 동작합니다. SVG를 사용해 일반적인 HTML와 웹 애플리케이션을 개선할 수 있습니다.
 			</p>
 		</article>
 	</section>
