--- a/assets/01-html/06-embedded/11-embed_element.html
+++ b/assets/01-html/06-embedded/11-embed_element.html
@@ -8,12 +8,12 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			외부 응용 프로그램이나 대화형 플러그인을 삽입.<br>
-			HTML 5에서 표준화되기 전에는 모든 표준 브라우저에서 구현 된 비표준 요소였습니다.<br>
-			HTML 5 이전의 동작은 다양 할 수 있습니다.<br>
-			embed 요소는 외부 (일반적으로 비 HTML) 응용 프로그램 또는 대화 형 내용에 대한 통합 지점을 제공합니다.<br>
+			외부 응용 프로그램이나 대화형 플러그인을 삽입합니다.<br>
+			HTML 5에서 표준화되기 전에는 모든 표준 브라우저에서 구현된 비표준 요소였습니다.<br>
+			HTML 5 이전의 동작은 다양합니다.<br>
+			embed 요소는 외부(일반적으로 비 HTML) 응용 프로그램 또는 대화형 내용에 대한 통합 지점을 제공합니다.<br>
 			브라우저 플러그인 용 컨텐츠를 삽입하는 데 사용됩니다. 이것에 대한 예외는 표준에 따라 다르게 처리되는 SVG와 HTML입니다.<br>
-			임베드 된 컨텐츠로 수행 할 수있는 작업과 수행 할 수없는 작업에 대한 세부 사항은 문제의 브라우저 플러그인에 달려 있습니다.
+			임베드 된 컨텐츠로 수행할 수 있는 작업과 수행할 수 없는 작업에 대한 세부 사항은 문제의 브라우저 플러그인에 달려 있습니다.
 		</p>
 		<ol class="ol_lst indent mt_s">
 			<li class="line_code font14">
@@ -21,11 +21,11 @@
 				<p>svg = document.getElementById("parent_id").getSVGDocument();</p>
 			</li>
 			<li class="line_code font14 mt_s">
-				<strong>내장 된 SVG 또는 HTML 문서의 내부에서 다음을 통해 부모에게 연락 할 수 있습니다.</strong>
+				<strong>내장된 SVG 또는 HTML 문서의 내부에서 다음을 통해 부모에게 연락할 수 있습니다.</strong>
 				<p>parent = window.parent.document;</p>
 			</li>
 			<li class="line_code font14 mt_s">
-				<strong>임베디드 HTML의 경우, 내가 찾은 부모로부터 임베디드 문서를 얻을 수있는 방법이 없습니다.</strong>
+				<strong>임베디드 HTML의 경우, 내가 찾은 부모로부터 임베디드 문서를 얻을 수 있는 방법이 없습니다.</strong>
 			</li>
 		</ol>
 	</section>
