--- a/assets/01-html/06-embedded/12-object_element.html
+++ b/assets/01-html/06-embedded/12-object_element.html
@@ -8,7 +8,7 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			멀티미디어, 중첩된 브라우저 컨텍스트(프레임), 플러그인 등을 삽입.<br>
+			멀티미디어, 중첩된 브라우저 컨텍스트(프레임), 플러그인 등을 삽입합니다.<br>
 			<code>&lt;object&gt;</code> 요소는 외부 리소스의 종류에 따라 문서 내에서 처리하는 방식을 변경할 수 있는 임베디드 객체(embedded object)를 정의할 때 사용합니다.<br>
 			<code>&lt;object&gt;</code> 요소를 사용하면 다양한 멀티미디어(오디오, 비디오, 자바 애플릿, 액티브X, 플래시 등)를 웹 페이지에 삽입할 수 있으며, 웹 페이지 자체를 다른 HTML 문서에 삽입할 수도 있습니다.
 		</p>
@@ -18,7 +18,7 @@
 			또한, <code>&lt;object&gt;</code> 요소는 data 속성이나 type 속성 중 하나를 반드시 명시해야만 합니다.
 		</p>
 		<p class="mt_s">
-			<code>&lt;param&gt;</code> 요소를 사용하여 <code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개변수를 정의할 수 있으며,
+			<code>&lt;param&gt;</code> 요소를 사용하여 <code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개 변수를 정의할 수 있으며,
 			페이지에 이미지를 삽입할 때도 <code>&lt;img&gt;</code> 요소가 아닌 <code>&lt;object&gt;</code> 요소를 대신 사용할 수도 있습니다.
 		</p>
 		<p class="mt_s">
@@ -37,21 +37,21 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[width], [height] <span class="t_blue">&lt;object width="너비" height="높이"&gt;</span></h3>
 			<p class="mt_s">
-				객체의 너비와 높이를 명시함.
+				객체의 너비와 높이를 명시합니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;object name="이름"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;object&gt;</code> 요소의 이름을 명시함.
+				<code>&lt;object&gt;</code> 요소의 이름을 명시합니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[usemap] <span class="t_blue">&lt;object usemap="#맵이름"&gt;</span></h3>
 			<p class="mt_s">
-				객체와 함께 사용될 클라이언트 사이드 이미지맵(client-side image-map)의 이름을 명시함.<br>
+				객체와 함께 사용될 클라이언트 사이드 이미지맵(client-side image-map)의 이름을 명시합니다.<br>
 				usemap 속성은 <code>&lt;map&gt;</code> 요소의 name 속성과 결합하여, <code>&lt;object&gt;</code> 요소와 <code>&lt;map&gt;</code> 요소 사이의 관계를 생성합니다.<br>
 				크롬, 오페라, 사파리는 지원하지 않음. IE, 파이어폭스만 지원.
 			</p>
@@ -60,15 +60,15 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[data] <span class="t_blue">&lt;object data="URL"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;object&gt;</code> 요소에서 사용할 리소스의 URL을 명시함.
+				<code>&lt;object&gt;</code> 요소에서 사용할 리소스의 URL을 명시합니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;object form="form id"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;object&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함.<br>
-				현재는 모든 브라우저에 지원하지 않음.
+				<code>&lt;object&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함합니다.<br>
+				현재는 모든 브라우저에 지원하지 않습니다.
 			</p>
 			<section class="view_editor ex_code mt_s" data-target="html/06-embedded/6.12.object_element_form.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
