--- a/assets/01-html/06-embedded/13-param_element.html
+++ b/assets/01-html/06-embedded/13-param_element.html
@@ -8,8 +8,8 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개변수(parameter)를 정의할 때 사용합니다.<br>
-			단일요소이며, HTML에서는 <code>&lt;param&gt;</code> 요소를 닫지 않지만, XHTML에서는 반드시 태그를 닫아야만 합니다.
+			<code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개 변수(parameter)를 정의할 때 사용합니다.<br>
+			단일 요소이며, HTML에서는 <code>&lt;param&gt;</code> 요소를 닫지 않지만, XHTML에서는 반드시 태그를 닫아야만 합니다.
 		</p>
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;param&gt;</code>요소에서 type, valuetype 속성을 더 이상 지원하지 않습니다.
@@ -25,7 +25,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;param name="이름"&gt;</span></h3>
 			<p class="mt_s">
-				매개변수의 이름을 명시함
+				매개변수의 이름을 명시합니다.
 				이 속성은 value 속성과 함께 사용하여 <code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개변수(parameter)를 명시합니다.
 				name 속성값에는 명시된 객체가 지원하는 이름이라면 어떠한 이름이라도 사용할 수 있습니다.
 			</p>
@@ -34,7 +34,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;param value="값"&gt;</span></h3>
 			<p class="mt_s">
-				매개변수의 값을 명시함
+				매개변수의 값을 명시합니다.
 				이 속성은 name 속성과 함께 사용하여 <code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개변수(parameter)를 명시합니다.
 				value 속성값에는 명시된 객체가 지원하는 값이라면 어떠한 값이라도 사용할 수 있습니다.
 			</p>
