--- a/assets/01-html/07-edits/02-ins_element.html
+++ b/assets/01-html/07-edits/02-ins_element.html
@@ -8,7 +8,7 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;ins&gt;</code>요소 (또는 HTML 삽인된 텍스트)는 문서에서 추가된 글자의 범위를 나타냅니다.<br>
+			<code>&lt;ins&gt;</code>요소(또는 HTML 삽인된 텍스트)는 문서에서 추가된 글자의 범위를 나타냅니다.<br>
 			<code>&lt;ins&gt;</code> 태그는 텍스트 아래쪽에 라인(line)을 추가하여 문서에 추가된 텍스트를 표현할 때 사용합니다.<br>
 			또한, <code>&lt;del&gt;</code> 요소는 텍스트 한가운데 라인을 추가하여 문서에서 삭제된 텍스트를 표현합니다.<br>
 			이와 같이 <code>&lt;del&gt;</code> 요소와 <code>&lt;ins&gt;</code> 요소는 문서에 대한 업데이트나 수정을 표현할 때 사용하며, 브라우저는 이를 일반 텍스트에 라인을 추가하는 것으로 표현할 것입니다.
@@ -24,17 +24,17 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[cite] <span class="t_blue">&lt;ins cite="URL"&gt;</span></h3>
 			<p class="mt_s">
-				텍스트가 추가되거나 변경된 이유에 대해서 알 수 있는 문서의 URL을 명시함.<br>
-				예를 들면, 회의록이나 문제해결시스템의 링크같은것들이 있습니다.
+				텍스트가 추가되거나 변경된 이유에 대해서 알 수 있는 문서의 URL을 명시합니다.<br>
+				예를 들면, 회의록이나 문제 해결 시스템의 링크 같은 것들이 있습니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[datetime] <span class="t_blue">&lt;ins datetime="YYYY-MM-DDThh:mm:ssTZD"&gt;</span></h3>
 			<p class="mt_s">
-				텍스트가 추가되거나 변경된 날짜와 시간을 명시함.<br>
+				텍스트가 추가되거나 변경된 날짜와 시간을 명시합니다.<br>
 				이 속성은 요소의 시간과 날짜를 나타내며 선택적으로 시간 정보를 갖는 유효한 날짜 문자열이어야 합니다.<br>
-				만일 값이 선택적으로 시간 정보를 갖는 날짜 문자열로 파싱될수 없다면, 요소는 관련된 타임스탬프를 소유하지 않게 됩니다.
+				만일 값이 선택적으로 시간 정보를 갖는 날짜 문자열로 파싱될 수 없다면, 요소는 관련된 타임스탬프를 소유하지 않게 됩니다.
 			</p>
 		</article>
 	</section>
