--- a/assets/02-css/03-cssMiddleclass/01-css_selectors_level3.html
+++ b/assets/02-css/03-cssMiddleclass/01-css_selectors_level3.html
@@ -99,10 +99,11 @@
 		</article>
 
 		<div class="view_editor edit_code mt_l" data-target="css/step02/3.1.selector/3.1.2.attribute-selector.html">
-			<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
+
 		<aside class="browser_support mt_m" data-tit="Attribute Selector">
 			<ul>
 				<li class="ie">8+</li>
@@ -138,7 +139,7 @@
 					문서의 root 요소(최상위 요소 html)를 선택합니다.
 				</p>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-root.html">
-					<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
@@ -152,7 +153,7 @@
 					엘리먼트 내에 스페이스 빈 공간이라도 있다면 그 요소는 비어있는 요소가 아니기 때문에 선택할 수 없습니다.
 				</p>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-empty.html">
-					<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
@@ -165,7 +166,7 @@
 					모든 자식(child) 요소 중에서 요소 유형(타입)에 상관없이 마지막에 위치하는 자식(child) 요소를 모두 선택함.
 				</p>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-last-child.html">
-					<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
@@ -180,7 +181,7 @@
 					예를 들어서 <code>p:first-of-type</code>은 부모의 첫 번째 자식이든 아니든 상관하지 않고 첫 번째 <code>&lt;p&gt;</code> 요소를 선택하게 됩니다.
 				</p>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-first-of-type.html">
-					<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
@@ -194,7 +195,7 @@
 					<code>:first-of-type</code>과 정확하게 동일하지만 컨테이너의 특정 유형(타입)의 요소에서 마지막을 찾습니다.
 				</p>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-last-of-type.html">
-					<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor min-height-450" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
@@ -208,13 +209,60 @@
 					만약 컨테이너에서 자식이 하나라면 그 요소를 선택하게 됩니다.
 				</p>
 				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-only-child.html">
-					<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
 				</div>
 			</div>
 
-			<p class="mt_l t_blue font16"><strong>:only-of-type 작업할 차례</strong></p>
+			<!-- :only-of-type -->
+			<div class="indent mt_ml">
+				<h4 class="ml_mn">:only-of-type</h4>
+				<p class="mt_s">
+					자식(child) 요소 중 동일한 유형의 형제가 없는 요소를 선택합니다.<br>
+					<code>:ony-child</code>와 마찬가지입니다. 단지 해당 요소가 컨테이너에서 그 유형(타입)에서 유일한 하나라면 그 요소를 선택합니다.<br>
+					예를 들어서 <code>&lt;div&gt;</code>가 하나의 <code>&lt;h1&gt;</code>과 하나의 <code>&lt;p&gt;</code>를 포함하고 있다면
+					이들 각각은 해당 유형(타입)이 유일한 요소일 것입니다.
+				</p>
+				<div class="view_editor edit_code mt_s" data-target="css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-only-of-type.html">
+					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+						<div class="code_wrap"><textarea></textarea></div>
+					</div>
+				</div>
+			</div>
+
+			<!-- :nth-child(n) -->
+			<div class="indent mt_ml">
+				<h4 class="ml_mn">:nth-child(n)</h4>
+				<p class="mt_s">
+					모든 자식(child) 요소 중에서 앞에서부터 n번째에 위치하는 자식(child) 요소를 모두 선택합니다.<br>
+					n번째 자식 의사(가상) 클래스는 정수와 표현식뿐만 아니라 두 개의 짧은 키워드(odd<i class="t_skyblue">:홀수</i>, even<i class="t_skyblue">:짝수</i>) 중 하나를 선택할 수도 있습니다.<br>
+					n번째 자식 의사(가상) 클래스는 지금까지 사용했던 양수뿐만 아니라 음수도 사용할 수도 있습니다.<br>
+					n은 0부터 시작하는 정수입니다.<br>
+					0과 음수는 생략되기 때문에 2n+1과 2n-1, 3n-2와 3n+1은 결과적으로 같은 수열을 생성합니다.<br>
+					<code>:nth-child</code> 사용은 해당 요소를 필요에 따라 적절하게 사용하여 활용도가 높은 의사(가상) 클래스입니다.<br>
+					다만 복잡한 페이지 선택의 경우 HTML에서 혼란스러운 <code>:nth-child</code> 표현식 보다 클래스를 직접 사용 하는 것이 좋습니다.
+				</p>
+
+				<div class="ol_lst mt_m">
+					<strong class="font16 t_skyblue">n번째 유형별 설명</strong>
+					<ol class="indent">
+						<li class="line_code font14 mt_s">
+							<strong class="el_block mb_sm">000</strong>
+							<p>000000</p>
+							<p>000000</p>
+						</li>
+						<li class="line_code font14 mt_s">
+							<strong class="el_block mb_sm">000</strong>
+							<p>000000</p>
+							<p>000000</p>
+						</li>
+					</ol>
+				</div>
+
+
+			</div>
+
 
 			<!--
 			<aside class="browser_support mt_m" data-tit="General Sibling Combinator">
