- 3. css중급 > 3.3. css 카운터 1차 완료

--- a/assets/02-css/03-cssMiddleclass/03-css_counter.html
+++ b/assets/02-css/03-cssMiddleclass/03-css_counter.html
@@ -155,7 +155,7 @@
 	</figure>
 
 	<section class="view_editor edit_code mt_l" data-target="css/step02/3.3.counter/3.3.counter.html">
-		<h2 class="ve_tit">가상 요소(Pseudo-elements) 예제</h2>
+		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
