- form > input 페이지는 3개로 분할 / html 페이지 부분 정리

--- a/assets/01-html/05-textLevel/13-q_element.html
+++ b/assets/01-html/05-textLevel/13-q_element.html
@@ -15,14 +15,14 @@
 		<div class="line_code mt_m">
 			<p class="t_blue">
 				<b>CSS 기본값 : </b><br>
-				q {display: inline;}<br>
-				q:before {content: open-quote;}<br>
-				q:after {content: close-quote;}
+				<span class="indent">q {display: inline;}</span><br>
+				<span class="indent">q:before {content: open-quote;}</span><br>
+				<span class="indent">q:after {content: close-quote;}</span>
 			</p>
 		</div>
 		<ol class="indent mt_m">
 			<li>
-				cite 속성 - &lt;q cite=&quot;https://www.w3.org/TR/html52/textlevel-semantics.html#the-q-element&quot;&gt;
+				cite 속성 - <code>&lt;q cite=&quot;https://www.w3.org/TR/html52/textlevel-semantics.html#the-q-element&quot;&gt;</code>
 				<div class="line_code">
 					<p>이 속성의 값은 인용된 정보의 원본 문서나 메세지를 가리키는 URL를 나타냅니다.</p>
 				</div>
