--- a/assets/01-html/05-textLevel/18-time_element.html
+++ b/assets/01-html/05-textLevel/18-time_element.html
@@ -26,9 +26,9 @@
 			</li>
 		</ol>
 		<div class="indent mt_m">
-			<strong><code>&lt;time&gt;</code> 요소의 datetime 속성값으로 유효한 데이터는 다음과 같습니다.</strong>
+			<strong class="t_black"><code>&lt;time&gt;</code> 요소의 datetime 속성값으로 유효한 데이터는 다음과 같습니다.</strong>
 		</div>
-		<ol class="indent_max">
+		<ol class="indent_max mt_sm">
 			<li>24시간 형태로 표현된 시간 데이터</li>
 			<li>그레고리력(Gregorian calendar)으로 표현되는 날짜 데이터(선택사항으로 시간 및 시간대 데이터를 포함할 수 있음)</li>
 			<li>유효한 기간 데이터</li>
