--- a/assets/01-html/12-bookmark/bookmark.html
+++ b/assets/01-html/12-bookmark/bookmark.html
@@ -14,7 +14,7 @@
 			→ "권고 후보 (CR : Candidate Recommendation)"<br>
 			→ "권고안 (PR : Proposed Recommendation)"<br>
 			→ "W3C 권고안 (Rec : Recommendation)"<br>
-			이라는 5개의 단계가 있다.
+			이라는 5개의 단계가 있습니다.
 		</p>
 	</blockquote>
 
