--- a/assets/01-html/05-textLevel/06-br_element.html
+++ b/assets/01-html/05-textLevel/06-br_element.html
@@ -8,13 +8,14 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;br&gt;</code> 요소는 텍스트 내의 줄바꿈(line-break)을 정의할 때 사용합니다.
-			HTML 소스 코드 내에서는 엔터(Enter)를 사용하여 줄바꿈을 실시하여도 브라우저 화면에 실제로 적용되지는 않습니다.
+			<code>&lt;br&gt;</code> 요소는 텍스트 내의 줄바꿈(line-break)을 정의할 때 사용합니다.<br>
+			HTML 소스 코드 내에서는 엔터(Enter)를 사용하여 줄바꿈을 실시하여도 브라우저 화면에 실제로 적용되지는 않습니다.<br>
 			따라서 <code>&lt;br&gt;</code> 요소는 주소(address)나 시(poem) 등 줄바꿈이 중요한 텍스트에 유용하게 사용됩니다.
 		</p>
-		<p>
-			<code>&lt;br&gt;</code> 요소는 빈 태그(empty)로, 종료 태그가 존재하지 않습니다.
-			HTML4에서는 <code>&lt;br&gt;</code> 요소를 닫지 않지만, XHTML에서는 다음과 같이 반드시 태그를 닫아야만 합니다. (ex. <code>&lt;br&gt;</code> vs. <code>&lt;br /&gt;</code>)
+		<p class="mt_s">
+			<code>&lt;br&gt;</code> 요소는 빈 태그(empty)로, 종료 태그가 존재하지 않습니다.<br>
+			HTML4에서는 <code>&lt;br&gt;</code> 요소를 닫지 않지만, XHTML에서는 다음과 같이 반드시 태그를 닫아야만 합니다.<br>
+			(ex. <code>&lt;br&gt;</code> vs. <code>&lt;br /&gt;</code>)<br>
 			HTML5에서는 <code>&lt;br&gt;</code> 요소의 종료 태그 닫아도 되고 닫지 않는것 모두 허용합니다.
 		</p>
 	</section>
