--- a/assets/01-html/05-textLevel/22-bdo_element.html
+++ b/assets/01-html/05-textLevel/22-bdo_element.html
@@ -17,7 +17,7 @@
 		</div>
 		<ol class="indent mt_m">
 			<li>
-				<mark>dir</mark> 속성 - &lt;bdo dir=&quot;(이 요소의 텍스트 방향)ltr | rtl | auto&quot;&gt;
+				<mark>dir</mark> 속성 - <code>&lt;bdo dir=&quot;(이 요소의 텍스트 방향)ltr | rtl | auto&quot;&gt;</code>
 				<div class="line_code mt_s">
 					<p><mark>ltr:</mark> 텍스트가 왼쪽에서 오른쪽 방향으로 이동해야 함을 나타내며, 필수 속성으로 반드시 명시해야 합니다.</p>
 					<p><mark>rtl:</mark> 텍스트가 오른쪽에서 왼쪽 방향으로 이동해야 함을 나타내며, 요소 내에 위치한 텍스트의 방향성을 명시합니다.</p>
