--- a/assets/01-html/06-embedded/10-svg_element.html
+++ b/assets/01-html/06-embedded/10-svg_element.html
@@ -10,12 +10,14 @@
 		<p>
 			스케일러블 벡터 그래픽스(Scalable Vector Graphics, SVG)는 2차원 벡터 그래픽을 표현하기 위한 XML 기반의 파일 형식으로,<br>
 			1999년 W3C(World Wide Web Consortium)의 주도하에 개발된 오픈 표준의 벡터 그래픽 파일 형식입니다.<br>
-			SVG는 백터(vector) 이미지를 표현하기 위한 포맷으로 W3C에서 만든 백터 이미지 표준입니다.<br>
-			SVG는 텍스트 기반의 오픈 웹 표준이며, 의심할 바 없이 CSS, DOM, SMIL 같은 다른 웹 표준과 함께 작동하기 위해서 디자인 되었습니다.
+			<code>&lt;SVG&gt;</code>는 백터(vector) 이미지를 표현하기 위한 포맷으로 W3C에서 만든 백터 이미지 표준입니다.<br>
+			<code>&lt;SVG&gt;</code>는 텍스트 기반의 오픈 웹 표준이며, 의심할 바 없이 CSS, DOM, SMIL 같은 다른 웹 표준과 함께 작동하기 위해서 디자인 되었습니다.
 		</p>
 		<p class="mt_s">
-			SVG 이미지들, 그것과 관련된 작동들은 XML XML 텍스트 파일로 정의되어 있습니다. 그렇기에 검색될 수 있고, 색인 가능하고, 스크립트 될 수 있고 압축 가능합니다.<br>
-			SVG 자체는 CSS가 아닙니다만 CSS를 이용해서 다양한 효과를 줄 때 SVG를 활용하는 경우가 많기 떄문에 여기서는 SVG에 대해서 간략하게 설명만 하도록 하겠습니다.
+			<code>&lt;SVG&gt;</code> 이미지들, 그것과 관련된 작동들은 XML XML 텍스트 파일로 정의되어 있습니다.
+			그렇기에 검색될 수 있고, 색인 가능하고, 스크립트 될 수 있고 압축 가능합니다.<br>
+			<code>&lt;SVG&gt;</code> 자체는 CSS가 아닙니다만 CSS를 이용해서 다양한 효과를 줄 때 SVG를 활용하는 경우가 많기 떄문에
+			여기서는 <code>&lt;SVG&gt;</code>에 대해서 간략하게 설명만 하도록 하겠습니다.
 		</p>
 	</section>
 
