--- a/assets/01-html/09-forms/03-input_element_part2.html
+++ b/assets/01-html/09-forms/03-input_element_part2.html
@@ -21,7 +21,7 @@
 		</p>
 	</blockquote>
 
-	<section class="mt_l">
+	<section class="mt_l" style="display:none">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			<code>&lt;input&gt;</code> 요소는 사용자로부터 입력을 받을 수 있는 입력 필드(input filed)를 정의할 때 사용합니다.<br>
