--- a/assets/02-css/03-cssMiddleclass/04-css_vendor.html
+++ b/assets/02-css/03-cssMiddleclass/04-css_vendor.html
@@ -82,7 +82,7 @@
 	</section>
 
 	<aside class="reference_box mt_l">
-		<h2 class="tit">CSS 카운터 참조</h2>
+		<h2 class="tit">CSS 접두어(Vendor Prefix) 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/CSS21/syndata.html#vendor-keywords" target="_blank" class="fas" title="새창열림">W3C Vendor-specific extensions</a></li>
 			<li class="reference"><a href="https://developer.mozilla.org/en-US/docs/Glossary/Vendor_Prefix" target="_blank" class="fas" title="새창열림">MDN Vendor_Prefix</a></li>
