--- a/ukncs/tutorials/css/step02/3.5.ir/3.5.ir.html
+++ b/ukncs/tutorials/css/step02/3.5.ir/3.5.ir.html
@@ -34,7 +34,7 @@
 				left:0;
 				width:48px;
 				height:48px;
-				background-image:url(img_sprite.png);
+				background-image:url('/ukncs/tutorials/css/step02/3.5.ir/img_sprite.png');
 				background-repeat:no-repeat;
 			}
 			/* 첫 번째 label 안의 span 가상요소::before off 이미지 */
