- css 중급 > css3 모듈 작업 중

--- a/assets/02-css/03-cssMiddleclass/05-css_ir.html
+++ b/assets/02-css/03-cssMiddleclass/05-css_ir.html
@@ -263,7 +263,7 @@
 	</section>
 
 	<aside class="reference_box mt_l">
-		<h2 class="tit">CSS 접두어(Vendor Prefix) 참조</h2>
+		<h2 class="tit">IR 기법 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="http://ui.daum.net/convention/css/css_ir" target="_blank" class="fas" title="새창열림">DAUM Web Standard Tech</a></li>
 			<li class="reference"><a href="https://developer.yahoo.com/performance/rules.html?guccounter=1&guce_referrer=aHR0cHM6Ly91eGttLmdpdGh1Yi5pby91a25jcy91eGttLWNzcy5odG1s&guce_referrer_sig=AQAAAMjaw5jTFsTIWzKgs2Mq5hJ4JhcdjVta89Jww48JEpRMYv5YXGN_2tgmOHjb2Fg5XJvbc5Gux3H0vu1bZPBNVusWU512JaMEafJjycq-iuZUDXmihIytDWa8QWk6P0f-67o8V0f2snf-PYdGb7Bg6UpohK3QHW81YFvUWhs7JQxn#opt_sprites" target="_blank" class="fas" title="새창열림">Yahoo Developer</a></li>
