--- a/ukncs/tutorials/css/step02/3.6.css3-module/3.6.1.css3-position-sticky2.html
+++ b/ukncs/tutorials/css/step02/3.6.css3-module/3.6.1.css3-position-sticky2.html
@@ -23,20 +23,21 @@
 				height: 1000px;
 				padding: 70px 20px;
 				background-size: cover;
-				background-image: url('img1.jpg');
+				background-image: url('/ukncs/tutorials/css/step02/3.6.css3-module/img1.jpg');
 				background-position: center;
 			}
 			.block-2 {
 				height: 1000px;
-				background: url('img2.jpg') no-repeat fixed;
+				background: url('/ukncs/tutorials/css/step02/3.6.css3-module/img2.jpg') no-repeat fixed;
 				background-size: cover;
 				background-position: center;
 				color:#fff;
 				font-size:90px;
 				text-align:center;
+				text-shadow:0 0 5px rgba(0,0,0,.5);
 			}
 			.block-3 {
-				background-image: url('img3.jpg');
+				background-image: url('/ukncs/tutorials/css/step02/3.6.css3-module/img3.jpg');
 			}
 			.block-4{
 				height:500px;
