--- a/ukncs/tutorials/css/step02/3.6.css3-module/3.6.2.css3-border-image.html
+++ b/ukncs/tutorials/css/step02/3.6.css3-module/3.6.2.css3-border-image.html
@@ -15,7 +15,7 @@
 				background-color: #ffa;
 
 				border-image:
-					url("border-diamonds.png")  /* 원본 이미지 */
+					url("/ukncs/tutorials/css/step02/3.6.css3-module/border-diamonds.png")  /* 원본 이미지 */
 					27 /                    /* 슬라이스 */
 					36px 28px 18px 8px /    /* 너비 */
 					18px 14px 9px 4px       /* 거리 */
