--- a/assets/01-html/09-forms/03-input_element_part1.html
+++ b/assets/01-html/09-forms/03-input_element_part1.html
@@ -7,7 +7,7 @@
 
 	<nav class="tab_menu x3 mt_lm">
 		<ul>
-			<li class="uk_link on"><a href="?data=Assets&HTML&forms&input_element_part1" class="uk_link">input part-1</a></li>
+			<li class="on"><a href="?data=Assets&HTML&forms&input_element_part1" class="uk_link">input part-1</a></li>
 			<li><a href="?data=Assets&HTML&forms&input_element_part2" class="uk_link">input part-2</a></li>
 			<li><a href="?data=Assets&HTML&forms&input_element_part3" class="uk_link">input part-3</a></li>
 		</ul>
