- css > 중급 > @media 작업 중

--- a/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-aspect-ratio.html
+++ b/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-aspect-ratio.html
@@ -1,6 +1,6 @@
 <style>
 	/* 가로 화면 비가 1:1 이상일 때 적용. 즉, 화면이 직사각이거나 세로일 때만 적용 */
-	@media screen and (min-aspect-ratio: 1/1) { ... }
+	@media screen and (min-aspect-ratio: 1/1) { … }
 
 	/* 뷰포트 너비가 5, 높이가 4 비율이면 실행 */
 	@media all and (aspect-ratio:5/4) { … }
