--- a/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-css-inner-div.html
+++ b/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-css-inner-div.html
@@ -1,7 +1,4 @@
 <style>
-	/* 모든 장치에서 최소 너비 20em 이상이면 적용 */
-	@media (min-width: 20em) { … }
-
 	/* 뷰포트 너비가 768px 이상 '그리고' 1024px 이하이면 실행 */
 	@media all and (min-width:768px) and (max-width:1024px) { … }
 
@@ -10,4 +7,10 @@
 
 	/* 뷰포트 너비가 768px 이상 '그리고' 1024px 이하가 '아니면' 실행 */
 	@media not all and (min-width:768px) and (max-width:1024px) { … }
+
+	/* 스크린 너비가 320px '그리고' 높이가 480px 이면 실행 */
+	@media all and (device-width:320px) and (device-height:480px) { … }
+
+	/* 스크린 너비가 최소 320px 이상 '그리고' 높이가 최소 480px 이상이면 실행 */
+	@media all and (min-device-width:320px) and (min-device-height:480px) { … }
 </style>
