--- a/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-devie-aspect-ratio.html
+++ b/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-devie-aspect-ratio.html
@@ -1,6 +1,6 @@
 <style>
 	/* 장치 가로 세로 비가 16:9일 때 적용 */
-	@media screen and (device-aspect-ratio: 16/9) { ... }
+	@media screen and (device-aspect-ratio: 16/9) { … }
 
 	/* 스크린 너비가 5, 높이가 4 비율이면 실행 */
 	@media all and (device-aspect-ratio:5/4) { … }
