--- a/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-type.html
+++ b/ukncs/tutorials/css/step02/3.9.media/3.9.3.media-type.html
@@ -1,7 +1,7 @@
 <style>
 	/* 모든 유형의 장치이며 최소너비 700px 일 때 스타일을 적용 */
 	@media (min-width: 700px) {background-color: yellow;}
-	@media all and (min-width: 700px) {...}
+	@media all and (min-width: 700px) { … }
 
 	/* 인쇄할 페이지 설정 */
 	@media print {
