- css > 중급 > CSS 속성 선언순서 작업 중

--- a/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
+++ b/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
@@ -16,7 +16,7 @@
 			</code>
 			에 대한 내용을 다루고 있습니다.
 		</p>
-		<p class="mt_s">
+		<p class="mt_m">
 			<b class="t_blue">CSS3</b>는 새롭게 정의된 기능과 함께 이전 버전의 CSS 기능까지도 함께 포함하고 있는 모듈(module)이라는 것으로 구성됩니다.<br>
 			CSS 초급에서 정의된 속성들 외에 CSS 모듈 레벨 3에 정의된 속성들에 대해 간략하게 설명합니다.<br>
 			브라우저별로 지원 안 되는 부분이 많습니다.
