- css > 고급 > transform 작업 중, part script 수정

--- a/assets/kmtemp/transform/box_model.html
+++ b/assets/kmtemp/transform/box_model.html
@@ -23,29 +23,30 @@
 
 	<script type="text/javascript" src="/assets/kmtemp/lib/js/jquery-1.9.1.min.js"></script>
 	<script src="/assets/kmtemp/lib/js/ukDetect-1.0.0.js"></script>
-</head>
-<body>
-<div class="wrap">
 
 	<style>
 		.box.b_width {box-shadow:none !important;}
 	</style>
+</head>
+<body>
+<div class="wrap">
+
 	<section class="contentArea" style="padding:0;">
 
 		<!-- box model -->
 		<article class="box_md" style="max-width:100%; margin:0 auto;">
-			<ul class="lst_area" style="margin:0; border:0;">
-				<li class="form_set ex_wrap" style="border:0;">
+			<ul class="lst_area" style="margin:0;">
+				<li class="form_set ex_wrap">
 					<div class="box_clear">
 						<div class="box_wrap" data-tit="box-sizing: content-box">
 							<i class="line lw"></i><i class="line lh"></i>
-							<div class="box_cover"><div class="box"><p></p></div></div>
+							<div class="box_cover"><div class="box"><p>안녕하세요 추교성입니다.</p></div></div>
 							<div class="box b_width"></div>
 							<p class="w_txt">content-box<br>(default)</p>
 						</div>
 						<div class="box_wrap" data-tit="box-sizing: border-box">
 							<i class="line lw"></i><i class="line lh"></i>
-							<div class="box_cover"><div class="box"><p></p></div></div>
+							<div class="box_cover"><div class="box"><p>안녕하세요 추교성입니다.</p></div></div>
 							<div class="box b_width"></div>
 							<p class="w_txt">border-box</p>
 						</div>
@@ -79,8 +80,8 @@
 							-->
 							<p class="lf" data-tit="width"><input type="range" min="60" max="120" step="1" value="120"></p>
 							<p class="lf" data-tit="height"><input type="range" min="60" max="120" step="1" value="120"></p>
-							<p class="both" data-tit="padding"><input type="range" min="0" max="30" step="1" value="20"></p>
-							<p class="lf" data-tit="border"><input type="range" min="0" max="30" step="1" value="10"></p>
+							<p class="lf" data-tit="padding"><input type="range" min="0" max="30" step="1" value="20"></p>
+							<p class="both" data-tit="border"><input type="range" min="0" max="30" step="1" value="10"></p>
 							<p class="lf" data-tit="border-radius"><input type="range" min="0" max="100" step="1" value="20"></p>
 							<p class="both" data-tit="margin"><input type="range" min="0" max="30" step="1" value="20"></p>
 							<!--
