- css > 고급 > transform 완료

--- a/assets/kmtemp/transform/2d.html
+++ b/assets/kmtemp/transform/2d.html
@@ -292,6 +292,13 @@
 					</div>
 				</li>
 			</ul>
+			<dl class="ex_txt">
+				<dt>Matrix 부가설명</dt>
+				<dd>너비(scaleX)와 높이(scaleY)는 0부터 9까지의 수치를 사용합니다. 1은 기본 값, 2는 두 배, 0.5는 절반이다. 음수는 사용할 수 없습니다.</dd>
+				<dd>매트릭스에서의 기울기는 skew() 함수를 쓰지 않고 tan() 함수를 사용하며, 0부터 9까지의 수치로 표현합니다.</dd>
+				<dd>이동(trnaslate)은 픽셀 단위를 사용하는데, 단위명은 쓰지 않습니다. <i>따라서 100px을 이동시키려고 한다면 그냥 <b>100</b>이라고 적어야 합니다.</i> 다른 단위를 사용하려면 매트릭스를 사용하지 않아야 합니다. 음수 사용이 가능하며, 반대방향을 의미합니다.</dd>
+				<!--<dd class="source">설명글 출처 : beautifulcss [<a href="http://www.beautifulcss.com/archives/2136" target="_blank">http://www.beautifulcss.com/archives/2136</a>]</dd>-->
+			</dl>
 		</article>
 
 		<!-- 기준점 -->
